# float

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  main.rs  state.rs
crates/api/src/routes/: attachment_routes.rs  auth_routes.rs  events.rs  label_routes.rs  mod.rs  project_routes.rs  task_routes.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/entities/: label.rs  mod.rs  project.rs  task.rs  task_label.rs  user.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260507_000001_create_tables.rs  m20260525_000002_add_parent_id.rs  m20260525_000003_uuid_ids.rs  m20260525_000004_add_icon.rs  m20260610_000001_init_sqlite.rs
deploy/: Caddyfile  docker-compose.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html  service-worker.ts
frontend/src/lib/: api.ts  keyboard.ts  smart-input.ts  theme.svelte.ts  touch-dnd.ts  types.ts  utils.ts
frontend/src/lib/components/: ColorPicker.svelte  CommandPalette.svelte  ConfirmModal.svelte  DatePicker.svelte  DeleteConfirmModal.svelte  NoteEditor.svelte  SmartInput.svelte  TaskDetail.svelte  ToastContainer.svelte  WeekTaskRow.svelte  WeekView.svelte
frontend/src/lib/editor/: index.ts  migrate.ts  save-extension.ts  tab-extension.ts  task-mention.ts
frontend/src/lib/stores/: data.svelte.ts  sync.ts  toast.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/app/: +layout.svelte  +page.svelte
frontend/src/routes/app/overview/: +page.svelte
frontend/src/routes/app/project/[id]/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/static/: manifest.json  sw.js
mcp/: package-lock.json  package.json
mcp/src/: api.ts  commands.ts  index.ts
